# phitech-legacy

./: .gitignore  requirements.txt  setup.py
bento-cpp/: .gitignore  CMakeLists.txt  main.cpp
examples/: bento-to-depth.ipynb  phitech-sierra-helpers.ipynb
phitech/: banner.py  conf.py  const.py  logger.py  main.py  templates.py
phitech/generators/: backtest.py  bot.py  helpers.py  live.py  notebook.py
phitech/helpers/: backtrader.py  glob.py  ib.py  instruments.py  sierra.py
phitech/tradingview/: __init__.py  helpers.py  query.py  scanner.py
